Update nav & footer styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- hero section con carousel bootstrap -->
-    <header id="hero-section">
+    <header id="hero-section" class="pt-5 mt-3 pt-md-0 mt-md-0">
         <div id="pvCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -206,12 +206,12 @@
     </section>
 
     <!-- Footer con enlaces a RRSS correspondiente a lo solicitado -->
-    <footer id="footer" class="text-center">
+    <footer id="footer" class="text-center py-3 py-sm-0">
         <div class="row container m-auto py-1">
             <div class="col-12 col-sm-6">
-                <h3 class="font-weight-bold text-uppercase">Viajes Chile</h3>
+                <h3 class="font-weight-bold text-uppercase mb-0">Viajes Chile</h3>
             </div>
-            <div class="mt-4 mt-sm-0 col-12 col-sm-6 d-flex align-items-center">
+            <div class="mt-3 mt-sm-0 col-12 col-sm-6 d-flex align-items-center justify-content-center justify-content-md-right">
                 <a href="http://github.com">
                     <i class="fab fa-github-square fa-2x mx-2"></i>
                 </a>
