--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 
     <!-- hero section con carousel bootstrap -->
-    <header id="hero-section" class="pt-5 mt-3 pt-md-0 mt-md-0">
+    <header id="hero-section" class="pt-lg-0">
         <div id="pvCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
