Update navbar & hidden mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#top-main">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-none d-lg-block">
                         <a class="nav-link" href="#quienes-somos">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
@@ -78,7 +78,7 @@
     </header>
 
     <!-- Sección "quienes somos". Desaparece en xs y sm. Reaparece desde md -->
-    <section id="quienes-somos" class="p-3 p-md-5 container d-none d-md-block">
+    <section id="quienes-somos" class="p-3 p-md-5 container d-none d-lg-block">
         <h2 class="pb-3 text-center">¿Quiénes somos?</h2>
         <hr>
         <div class="row pt-3">
