--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <title>Viajes Chile</title>
 </head>
 <body>
-<main>
+<main id="main">
     <!-- navegación fija -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="top-main">
         <div class="container">
-            <a class="navbar-brand" href="#top-main">
+            <a class="navbar-brand" href="#main">
                 <img src="assets/img/viajes.svg" alt="Viajes Logo">
                 Viajes Chile
             </a>
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#top-main">Inicio</a>
+                        <a class="nav-link" href="#main">Inicio</a>
                     </li>
                     <li class="nav-item d-none d-lg-block">
                         <a class="nav-link" href="#quienes-somos">Quiénes somos</a>
